<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:onClick="home"
    tools:context=".Maths_tools_page">
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_screen">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="590dp">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:background="@color/white"
                android:gravity="center"
                android:onClick="quadeqn"
                android:text="Solve the problems of:"
                android:textColor="@color/black"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/box_design"
                android:gravity="center"
                android:onClick="quadeqn"
                android:text="@string/quadratic_equation"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/box_design"
                android:gravity="center"
                android:onClick="log_calculation"
                android:text="@string/log_calculation"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/box_design"
                android:gravity="center"
                android:onClick="linear_eqn2var"
                android:text="@string/linear_equation_2_variables"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/trignometry"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:onClick="trignometry"
                android:layout_marginBottom="50dp"
                android:background="@drawable/box_design"
                android:gravity="center"
                android:text="@string/trigonometry"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/tempId"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:onClick="TempClick"
                android:background="@drawable/box_design"
                android:gravity="center"
                android:text="@string/temperature"
                android:textColor="@color/white"
                android:textSize="35sp" />
            <TextView
                android:id="@+id/currency_conv"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:onClick="currency"
                android:background="@drawable/box_design"
                android:gravity="center"
                android:text="Currency Converter"
                android:textColor="@color/white"
                android:textSize="35sp" />



        </LinearLayout>



    </ScrollView>

    <TextView
        android:id="@+id/home_screen"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:foreground="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />


</androidx.constraintlayout.widget.ConstraintLayout>
