<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Quadratic_Equation">

    <TextView
        android:id="@+id/home_screen1"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:foreground="@drawable/home"
        android:layout_alignParentStart="true"
        android:padding="50dp"/>

    <TextView
        android:id="@+id/textView200"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="Enter the coefficent to obtain the required roots (ax²+bx+c=0)"
        android:fontFamily="@font/dm_sans_medium"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_below="@id/home_screen1" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:textSize="21dp"
        android:gravity="center|left"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:layout_below="@id/textView200" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/textView37"
        android:layout_above="@id/button">

        <EditText
            android:id="@+id/editTextNumberSigned"
            android:layout_width="180dp"
            android:layout_height="170dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/box_design"
            android:baselineAligned="true"
            android:ems="10"
            android:foregroundGravity="bottom"
            android:gravity="center_vertical"
            android:hint="@string/cofficent_of_a"
            android:textColorHint="@color/white"
            android:fontFamily="@font/dm_sans"
            android:inputType="numberSigned|numberDecimal"
            android:paddingLeft="7sp"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/editTextNumberSigned2"
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/box_design"
            android:baselineAligned="false"
            android:ems="10"
            android:foregroundGravity="bottom"
            android:hint="@string/cofficent_of_b"
            android:inputType="numberSigned|numberDecimal"
            android:textColorHint="@color/white"
            android:fontFamily="@font/dm_sans"
            android:paddingLeft="7sp"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/editTextNumberSigned3"
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/box_design"
            android:baselineAligned="false"
            android:ems="10"
            android:hint="@string/cofficent_of_c"
            android:inputType="numberSigned|numberDecimal"
            android:textColorHint="@color/white"
            android:fontFamily="@font/dm_sans"
            android:paddingLeft="7sp"
            android:textSize="25dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="2dp"
        android:background="@drawable/button_design2"
        android:foregroundGravity="center"
        android:gravity="center"
        android:shadowColor="@color/purple_500"
        android:text="@string/submit"
        android:fontFamily="@font/dm_sans_bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"/>


    <TextView
        android:id="@+id/retry1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:foreground="@drawable/ic_baseline_refresh_24"
        android:onClick="retry1"
        android:layout_alignParentEnd="true"
        android:padding="50dp"/>
    
    
</RelativeLayout>
