<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".currency_converter">

    <TextView
        android:id="@+id/home_screen5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:foreground="@drawable/home"
        android:onClick="home_screen_currency"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />


    <TextView
        android:id="@+id/retry2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:foreground="@drawable/ic_baseline_refresh_24"
        android:onClick="retry_currency"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/currency_converter"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />


    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency"
        app:layout_constraintVertical_bias="0.110000014" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.060000002">

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/from_currency"

            android:textColor="@color/white"

            android:textSize="25dp" />


        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/button_design2" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.29000002">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/to_currency"
            android:textColor="@color/white"
            android:textSize="25dp" />


        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/to"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/button_design2" />


    </LinearLayout>

    <Button
        android:id="@+id/currency_convertor"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="2dp"
        android:background="@drawable/button_design3"
        android:fontFamily="@font/dm_sans_bold"
        android:foregroundGravity="center"
        android:gravity="center"
        android:shadowColor="@color/purple_500"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.37" />

    <EditText
        android:id="@+id/currency"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="@drawable/button_design"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_value"
        android:inputType="numberSigned|numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25"
        app:layout_constraintVertical_bias="0.04000002" />




</androidx.constraintlayout.widget.ConstraintLayout>